# Langgraph-ReAct-Agent

./: .env.sample  .gitignore  README.md  pyproject.toml  replacements.txt  requirements.txt  test_embeddings.py
app/: __init__.py  cli.py  config.py  embeddings.py  graph.py  ingest.py  llm.py  logging_config.py  models.py  nodes.py  rag_chain.py  retriever.py  tools.py
config/: logging.yaml  settings.yaml
data/metrics/: system_stats.csv
scripts/: build_index.py  test_tools.py  tools_smoke.py
src/agent/: app.py  old.app.py  state.py
src/agent/api/: server.py
src/agent/cli/: main.py
src/agent/graph/: act_observe_reason.py
src/agent/llm/: factory.py
src/agent/memory/: memory.py
src/agent/prompts/: system.txt  templates.py
src/agent/rag/: loaders.py  prepare.py  retriever.py
src/agent/tools/: __init__.py  calculator.py  manual_search.py  now_time.py  system_stats.py
tests/: conftest.py  test_agent_end_to_end.py  test_app.py  test_embeddings.py  test_graph.py  test_rag.py  test_rag_new.py  test_retriever.py  test_smoke.py  test_tools.py  test_tools_new.py
web/: index.html
