[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "langgraph-rag-pipeline"
version = "2.0.0"
description = "Corrective RAG pipeline with LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3,<1.0",
    "langchain-community>=0.3,<1.0",
    "langchain-huggingface>=0.1,<1.0",
    "langchain-openai>=0.2,<1.0",
    "langgraph>=0.3,<1.0",
    "faiss-cpu>=1.9,<2.0",
    "pypdf>=5.0,<6.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic-settings>=2.0,<3.0",
    "sentence-transformers>=3.0,<4.0",
]

[project.scripts]
langgraph-rag = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]
